[package]
name = "visited-systems"
version = "1.0.0"
authors = ["Igaguri <igagurimk@gmail.com>"]
edition = "2018"

description = "Elite: DangerousのVisited Starsの修正用のImportStars.txtをジャーナルファイルから作成するツール"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/IgaguriMK/ed-voice-attendant"
repository = "https://github.com/IgaguriMK/ed-voice-attendant"
categories = []
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
